Translations AI POC

--- a/package.json
+++ b/package.json
@@ -22,12 +22,7 @@
         "Snippets"
     ],
     "activationEvents": [
-        "onLanguage:al",
-        "onCommand:al-toolbox.createRelatedTables",
-        "onCommand:al-toolbox.renumberAll",
-        "onCommand:al-toolbox.changePrefix",
-        "onCommand:al-toolbox.initGitignore",
-        "onCommand:al-toolbox.renumberAllFields"
+        "onLanguage:al"
     ],
     "main": "./src/extension.js",
     "contributes": {
@@ -90,8 +85,12 @@
             },
             {
                 "command": "al-toolbox.renumberAllFields",
-                "title": "ALTB: Renumber all fields"
-            }
+                "title": "ALTB: Renumber all fields"            
+            },
+            {
+                "command": "al-toolbox.enterOpenAIAPIKey",
+                "title": "ALTB: Enter OpenAI API Key"
+            }            
         ],
         "configuration": [
             {
@@ -172,7 +171,7 @@
                         "scope": "resource",
                         "pattern": "^([a-z]{2}-[A-Z]{2})$|^[A-Z]{3}$",
                         "patternErrorMessage": "Supported formats: xx-XX or XXX (for example: fr-BE or FRB)"
-                    }, 
+                    },
                     "ALTB.DisableHoverProviders": {
                         "type": "boolean",
                         "default": false,
@@ -189,10 +188,10 @@
                         "type": "string",
                         "default": "External",
                         "description": "Custom identifier for Application Insights",
-                        "scope": "resource",                        
+                        "scope": "resource",
                         "pattern": "^[A-Za-z0-9]{0,10}$",
                         "patternErrorMessage": "Maximum 10 characters (A-Z, a-z, 0-9)"
-                    }                                     
+                    }
                 }
             }
         ]
@@ -207,12 +206,15 @@
         "@types/vscode": "^1.42.0",
         "eslint": "^6.8.0",
         "glob": "^7.1.6",
-        "mocha": "^7.0.1",
+        "mocha": "^10.2.0",
         "typescript": "^3.7.5",
         "vscode-test": "^1.3.0"
     },
     "dependencies": {
-        "glob": "7.1.6"
+        "glob": "7.1.6",
+        "openai": "^4.15.4",
+        "vscode-extension-telemetry": "^0.4.5",
+        "vscode": "^10.2.0"
     },
     "extensionDependencies": [
         "andrzejzwierzchowski.al-code-outline"
