--- a/package.json
+++ b/package.json
@@ -98,10 +98,6 @@
             {
                 "command": "al-toolbox.generateTranslationCache",
                 "title": "ALTB: Genererate translations cache"
-            },
-            {
-                "command": "al-toolbox.test",
-                "title": "ALTB: Test"
             }
         ],
         "configuration": [
@@ -234,8 +230,7 @@
         "jszip": "^3.10.1",
         "node-cache": "^5.1.2",
         "openai": "^4.15.4",
-        "vscode-extension-telemetry": "^0.4.5",
-        "xml2js": "^0.6.2"
+        "vscode-extension-telemetry": "^0.4.5"
     },
     "extensionDependencies": [
         "andrzejzwierzchowski.al-code-outline"
